--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
                 </ul>
             </div>
         </header>
+        <main>
+            <section class="main-section">
+                <div class="conteiner">
+                    <h1 class="main-section__description">
+                        Эффективные решения для вашего бизнеса
+                    </h1>
+                    <button
+                        data-modal-open
+                        type="button"
+                        class="main-section__btn"
+                    >
+                        Заказать услугу
+                    </button>
+                </div>
+            </section>
+        </main>
 
         <div class="mobile-menu" data-menu>
             <ul class="mobile-menu__nav">
@@ -139,6 +155,116 @@
                     <a href="" class="mobile-menu__socials-link">LinkedIn</a>
                 </li>
             </ul>
+        </div>
+
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button data-modal-close class="modal__close-btn">
+                    <svg class="modal__close-icon" width="20" height="20">
+                        <use href="./images/icons.svg#close"></use>
+                    </svg>
+                </button>
+                <!-- Дані користувача -->
+                <b class="modal__title"
+                    >Оставьте свои данные,мы вам перезвоним</b
+                >
+                <form class="contact-form" action="/">
+                    <label class="contact-form__group">
+                        <span class="contact-form__label">Имя</span>
+                        <span class="contact-form__wrapper">
+                            <input
+                                class="contact-form__input"
+                                type="text"
+                                name="user-name"
+                            />
+                            <svg
+                                class="contact-form__icon"
+                                width="12"
+                                height="12"
+                            >
+                                <use href="./images/icons.svg#user"></use>
+                            </svg>
+                        </span>
+                    </label>
+                    <label class="contact-form__group">
+                        <span class="contact-form__label">Телефон</span>
+                        <span class="contact-form__wrapper">
+                            <input
+                                class="contact-form__input"
+                                type="tel"
+                                name="user-phone"
+                            />
+                            <svg
+                                class="contact-form__icon"
+                                width="12"
+                                height="12"
+                            >
+                                <use href="./images/icons.svg#user"></use>
+                            </svg>
+                        </span>
+                    </label>
+                    <label class="contact-form__group">
+                        <span class="contact-form__label">Почта</span>
+                        <span class="contact-form__wrapper">
+                            <input
+                                class="contact-form__input"
+                                type="email"
+                                name="user-mail"
+                            />
+                            <svg
+                                class="contact-form__icon"
+                                width="12"
+                                height="12"
+                            >
+                                <use
+                                    href="./images/icons.svg#icon-envelope"
+                                ></use>
+                            </svg>
+                        </span>
+                    </label>
+                    <!-- Коментар -->
+                    <label class="contact-form__group">
+                        <span class="contact-form__label">Коментарий</span>
+                        <textarea
+                            class="contact-form__textarea"
+                            name="user-coments"
+                            cols="30"
+                            rows="7"
+                            placeholder="Введите текст"
+                        ></textarea>
+                    </label>
+                    <!-- Політика приватності -->
+                    <label class="contact-form__policy-group">
+                        <input
+                            class="contact-form__checkbox contact-form__checkbox--visually-hidden"
+                            type="checkbox"
+                            name="user-agreement"
+                        />
+                        <span class="contact-form__custom-checkbox">
+                            <svg
+                                class="contact-form__custom-checkbox-icon"
+                                width="16"
+                                height="15"
+                            >
+                                <use href="./images/icons.svg#check"></use>
+                            </svg>
+                        </span>
+                        <span class="contact-form__policy-description"
+                            >Соглашаюсь с рассылкой и принимаю
+                            <a
+                                class="contact-form__policy-description-link"
+                                href="#"
+                                >Условия договора</a
+                            >
+                        </span>
+                    </label>
+                    <div class="contact-form__btn-inner">
+                        <button class="contact-form__btn" type="submit">
+                            Отправить
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </body>
 </html>
