--- a/index.html
+++ b/index.html
@@ -109,6 +109,92 @@
                     </button>
                 </div>
             </section>
+
+            <section class="benefits">
+                <div class="conteiner">
+                    <h2
+                        class="benefits__caption benefits__caption--visually-hidden"
+                    >
+                        Преимущества
+                    </h2>
+                    <ul class="benefits__list">
+                        <li class="benefits__item">
+                            <div class="benefits__icon-wrapper">
+                                <svg
+                                    class="benefits__icon"
+                                    width="65"
+                                    height="70"
+                                >
+                                    <use href="./images/icons.svg#icon1"></use>
+                                </svg>
+                            </div>
+                            <h3 class="benefits__title">Внимание к деталям</h3>
+                            <p
+                                class="benefits__description benefits__description--secondary-text"
+                            >
+                                Идейные соображения, а также начало повседневной
+                                работы по формированию позиции.
+                            </p>
+                        </li>
+                        <li class="benefits__item">
+                            <div class="benefits__icon-wrapper">
+                                <svg
+                                    class="benefits__icon"
+                                    width="65"
+                                    height="70"
+                                >
+                                    <use href="./images/icons.svg#icon2"></use>
+                                </svg>
+                            </div>
+                            <h3 class="benefits__title">Пунктуальность</h3>
+                            <p
+                                class="benefits__description benefits__description--secondary-text"
+                            >
+                                Задача организации, в особенности же рамки и
+                                место обучения кадров влечет за собой.
+                            </p>
+                        </li>
+                        <li class="benefits__item">
+                            <div class="benefits__icon-wrapper">
+                                <svg
+                                    class="benefits__icon"
+                                    width="65"
+                                    height="70"
+                                >
+                                    <use href="./images/icons.svg#icon3"></use>
+                                </svg>
+                            </div>
+                            <h3 class="benefits__title">Планирование</h3>
+                            <p
+                                class="benefits__description benefits__description--secondary-text"
+                            >
+                                Равным образом консультация с широким активом в
+                                значительной степени обуславливает.
+                            </p>
+                        </li>
+                        <li class="benefits__item">
+                            <div class="benefits__icon-wrapper">
+                                <svg
+                                    class="benefits__icon"
+                                    width="65"
+                                    height="70"
+                                >
+                                    <use href="./images/icons.svg#icon4"></use>
+                                </svg>
+                            </div>
+                            <h3 class="benefits__title">
+                                Современные технологии
+                            </h3>
+                            <p
+                                class="benefits__description benefits__description--secondary-text"
+                            >
+                                Значимость этих проблем настолько очевидна, что
+                                реализация плановых заданий.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
 
         <div class="mobile-menu" data-menu>
