--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                     </ul>
                 </div>
             </section>
+
             <section class="team">
                 <div class="conteiner">
                     <h2 class="team__caption">Наша команда</h2>
@@ -642,6 +643,116 @@
                                     </li>
                                 </ul>
                             </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="clients">
+                <div class="conteiner">
+                    <h2 class="clients__caption">Постоянные клиенты</h2>
+                    <ul class="clients__list">
+                        <li class="clients__item">
+                            <a
+                                class="clients__link"
+                                href="#"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                aria-label="іконка logo"
+                            >
+                                <svg
+                                    class="clients__icon"
+                                    width="170"
+                                    height="92"
+                                >
+                                    <use href="./images/icons.svg#logo"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients__item">
+                            <a
+                                class="clients__link"
+                                href=""
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                aria-label="іконка logo1"
+                            >
+                                <svg
+                                    class="clients__icon"
+                                    width="170"
+                                    height="92"
+                                >
+                                    <use href="./images/icons.svg#logo1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients__item">
+                            <a
+                                class="clients__link"
+                                href="#"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                aria-label="іконка logo2"
+                            >
+                                <svg
+                                    class="clients__icon"
+                                    width="170"
+                                    height="92"
+                                >
+                                    <use href="./images/icons.svg#logo2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients__item">
+                            <a
+                                class="clients__link"
+                                href="#"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                aria-label="іконка logo3"
+                            >
+                                <svg
+                                    class="clients__icon"
+                                    width="170"
+                                    height="92"
+                                >
+                                    <use href="./images/icons.svg#logo3"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients__item">
+                            <a
+                                class="clients__link"
+                                href="#"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                aria-label="іконка logo4"
+                            >
+                                <svg
+                                    class="clients__icon"
+                                    width="170"
+                                    height="92"
+                                >
+                                    <use href="./images/icons.svg#logo4"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients__item">
+                            <a
+                                class="clients__link"
+                                href="#"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                aria-label="іконка logo5"
+                            >
+                                <svg
+                                    class="clients__icon"
+                                    width="170"
+                                    height="92"
+                                >
+                                    <use href="./images/icons.svg#logo5"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
