--- a/index.html
+++ b/index.html
@@ -757,6 +757,147 @@
                     </ul>
                 </div>
             </section>
+
+            <footer class="footbar">
+                <div class="conteiner footbar__container">
+                    <div class="footbar__wraper">
+                        <div>
+                            <a href="/hm-2/index.html" class="footbar__logo"
+                                ><span class="accent-text">Web</span>Studio</a
+                            >
+                            <address class="footbar-address">
+                                <p class="footbar-address__text">
+                                    г. Киев, пр-т Леси Украинки, 26
+                                </p>
+                                <ul class="footbar-contact">
+                                    <li class="footbar-contact__item">
+                                        <a
+                                            class="footbar-contact__link"
+                                            href="mailto:info@example.com"
+                                            >info@example.com</a
+                                        >
+                                    </li>
+                                    <li class="footbar-contact__item">
+                                        <a
+                                            class="footbar-contact__link"
+                                            href="tel:+380991111111"
+                                            >+38 099 111 11 11</a
+                                        >
+                                    </li>
+                                </ul>
+                            </address>
+                        </div>
+                        <div class="join">
+                            <h3 class="join__caption">Присоединяйтесь</h3>
+                            <ul class="socials-list">
+                                <li class="socials-list__item">
+                                    <a
+                                        class="socials-list__link"
+                                        href="#"
+                                        target="_blank"
+                                        rel="noopener noreferrer"
+                                        aria-label="іконка instagram"
+                                    >
+                                        <svg
+                                            class="socials-list__icon"
+                                            width="20"
+                                            height="20"
+                                        >
+                                            <use
+                                                href="./images/icons.svg#instagram"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials-list__item">
+                                    <a
+                                        class="socials-list__link"
+                                        href="#"
+                                        target="_blank"
+                                        rel="noopener noreferrer"
+                                        aria-label="іконка Twitter"
+                                    >
+                                        <svg
+                                            class="socials-list__icon"
+                                            width="20"
+                                            height="20"
+                                        >
+                                            <use
+                                                href="./images/icons.svg#twitter"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials-list__item">
+                                    <a
+                                        class="socials-list__link"
+                                        href=""
+                                        target="_blank"
+                                        rel="noopener noreferrer"
+                                        aria-label="іконка facebook"
+                                    >
+                                        <svg
+                                            class="socials-list__icon"
+                                            width="20"
+                                            height="20"
+                                        >
+                                            <use
+                                                href="./images/icons.svg#facebook"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials-list__item">
+                                    <a
+                                        class="socials-list__link"
+                                        href=""
+                                        target="_blank"
+                                        rel="noopener noreferrer"
+                                        aria-label="іконка linkedin"
+                                    >
+                                        <svg
+                                            class="socials-list__icon"
+                                            width="20"
+                                            height="20"
+                                        >
+                                            <use
+                                                href="./images/icons.svg#linkedin"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="subscription">
+                        <p class="subscription__caption">
+                            Подпишитесь на рассылку
+                        </p>
+                        <form class="subscription-form" action="/">
+                            <input
+                                class="subscription-form__email"
+                                type="email"
+                                name="email"
+                                placeholder="E-mail"
+                            />
+                            <button
+                                class="subscription-form__btn"
+                                type="submit"
+                            >
+                                Подписаться
+                                <svg
+                                    class="subscription-form__icon"
+                                    width="24"
+                                    height="24"
+                                >
+                                    <use href="./images/icons.svg#sent"></use>
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </footer>
         </main>
 
         <div class="mobile-menu" data-menu>
