fix internal links in menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="headbord">
             <div class="conteiner conteiner--centered">
                 <nav class="headbord__nav">
-                    <a class="headbord__logo" href="/hm-2/index.html"
+                    <a class="headbord__logo" href="/hm-8/index.html"
                         ><span class="accent-text">Web</span>Studio</a
                     >
                     <button type="button" class="menu-button" data-menu-button>
@@ -761,7 +761,7 @@
                 <div class="conteiner footbar__container">
                     <div class="footbar__wraper">
                         <div>
-                            <a href="/hm-2/index.html" class="footbar__logo"
+                            <a href="/hm-8/index.html" class="footbar__logo"
                                 ><span class="accent-text">Web</span>Studio</a
                             >
                             <address class="footbar-address">
@@ -903,16 +903,18 @@
             <ul class="mobile-menu__nav">
                 <li class="mobile-menu__item">
                     <a
-                        href="/"
+                        href="index.html"
                         class="mobile-menu__link mobile-menu__link--active"
                         >Студия
                     </a>
                 </li>
                 <li class="mobile-menu__item">
-                    <a href="" class="mobile-menu__link">Портфолио</a>
+                    <a href="portfolio.html" class="mobile-menu__link"
+                        >Портфолио</a
+                    >
                 </li>
                 <li class="mobile-menu__item">
-                    <a href="" class="mobile-menu__link">Контакты</a>
+                    <a href="/" class="mobile-menu__link">Контакты</a>
                 </li>
             </ul>
             <ul class="mobile-menu__contatcts">
