--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <header class="headbord">
             <div class="conteiner conteiner--centered">
                 <nav class="headbord__nav">
-                    <a class="headbord__logo" href="/hm-2/index.html"
+                    <a class="headbord__logo" href="/hm-8/index.html"
                         ><span class="accent-text">Web</span>Studio</a
                     >
                     <button type="button" class="menu-button" data-menu-button>
@@ -411,7 +411,7 @@
             <div class="conteiner footbar__container">
                 <div class="footbar__wraper">
                     <div>
-                        <a href="/hm-2/index.html" class="footbar__logo"
+                        <a href="/hm-8/index.html" class="footbar__logo"
                             ><span class="accent-text">Web</span>Studio</a
                         >
                         <address class="footbar-address">
@@ -546,17 +546,17 @@
         <div class="mobile-menu" data-menu>
             <ul class="mobile-menu__nav">
                 <li class="mobile-menu__item">
+                    <a href="index.html" class="mobile-menu__link">Студия </a>
+                </li>
+                <li class="mobile-menu__item">
                     <a
-                        href="/"
+                        href="portfolio.html"
                         class="mobile-menu__link mobile-menu__link--active"
-                        >Студия
-                    </a>
+                        >Портфолио</a
+                    >
                 </li>
                 <li class="mobile-menu__item">
-                    <a href="" class="mobile-menu__link">Портфолио</a>
-                </li>
-                <li class="mobile-menu__item">
-                    <a href="" class="mobile-menu__link">Контакты</a>
+                    <a href="/" class="mobile-menu__link">Контакты</a>
                 </li>
             </ul>
             <ul class="mobile-menu__contatcts">
