--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <header class="headbord">
             <div class="conteiner conteiner--centered">
                 <nav class="headbord__nav">
-                    <a class="headbord__logo" href="/hm-8/index.html"
+                    <a class="headbord__logo" href="/hw-8/index.html"
                         ><span class="accent-text">Web</span>Studio</a
                     >
                     <button type="button" class="menu-button" data-menu-button>
@@ -761,7 +761,7 @@
                 <div class="conteiner footbar__container">
                     <div class="footbar__wraper">
                         <div>
-                            <a href="/hm-8/index.html" class="footbar__logo"
+                            <a href="/hw-8/index.html" class="footbar__logo"
                                 ><span class="accent-text">Web</span>Studio</a
                             >
                             <address class="footbar-address">
