--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./css/main.min.css" />
+        <link rel="shortcut icon" href="favicon.ico" />
         <script defer src="./js/modal.js"></script>
         <script defer src="./js/mobile-menu.js"></script>
     </head>
